k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      NodePort: 30080
  type: NodePort
