k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: portfolio
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: "traefik"
  rules:
    - host: 152.67.109.202.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 30080
